--- a/index.html
+++ b/index.html
@@ -246,6 +246,17 @@
                         <!-- Drafted players will be injected here -->
                     </ul>
                 </div>
+
+                <div id="trade-history-summary"
+                    style="margin: 1.5rem 0; text-align: left; background: rgba(0,0,0,0.2); padding: 1rem; border-radius: 8px; display: none;">
+                    <h4
+                        style="color: var(--color-saints-gold); margin-bottom: 1rem; border-bottom: 1px solid var(--color-border); padding-bottom: 0.5rem;">
+                        Draft Day Trades</h4>
+                    <ul id="trade-history-list"
+                        style="list-style: none; padding: 0; line-height: 1.8; font-size: 0.9rem;">
+                        <!-- Executed trades will be injected here -->
+                    </ul>
+                </div>
                 <div class="modal-actions">
                     <button class="btn btn-primary" onclick="restartDraft()">Return to Start</button>
                 </div>
