--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
 
         <!-- Unified Trade Modal -->
         <div id="trade-modal" class="modal hidden">
-            <div class="modal-content glass-effect scale-in" style="max-width: 800px;">
+            <div class="modal-content glass-effect scale-in"
+                style="max-width: 800px; max-height: 90vh; overflow-y: auto; display: flex; flex-direction: column;">
                 <h3 class="modal-title">Trade Negotiations</h3>
 
                 <div class="trade-layout" style="display: flex; gap: 2rem; margin-bottom: 1.5rem;">
