--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2026 NFL Mock Draft Simulator - All Teams Edition</title>
+    <title>2026 NFL Mock Draft Simulator - Saints Edition</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -31,8 +31,7 @@
         <header class="header">
             <h1 class="main-title">NFL Mock Draft 2026</h1>
             <p class="subtitle">Simulator <span
-                    style="font-size: 0.8rem; margin-left: 10px; color: var(--color-text-secondary);">v1.0 (Released:
-                    2026/02/23)</span></p>
+                    style="font-size: 0.8rem; margin-left: 10px; color: var(--color-text-secondary);">v1.1 (2026/02/24)</span></p>
         </header>
 
         <!-- Main Content Area -->
@@ -339,6 +338,9 @@
             Draft Pick Trade Values based on the <a href="https://www.drafttek.com/NFL-Trade-Value-Chart-Rich-Hill.asp"
                 target="_blank" style="color: var(--color-text-primary); text-decoration: none; font-weight: bold;">Rich
                 Hill Trade Value Chart (DraftTek)</a>.
+        </p>
+        <p style="margin-top: 1rem; font-style: italic;">
+            Special Thanks: @kcatchalrotto, @sugi_cards, @hawks3939, @ki42427645
         </p>
     </footer>
 
